create the empty grid

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Ship Locations!</title>
-
+    <link rel="stylesheet" href="styles/gameStyle.css">
 
 </head>
 <body>
 <h1>Ship locations</h1>
+<table>
+    <thead id="salvoTHead"></thead>
+    <tbody id="salvoTBody"></tbody>
 
+</table>
 
 
 <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
-
-
+<script src="scripts/game.js"></script>
 
 </body>
 </html>
