create code to print players above the grid

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <h1>Ship locations</h1>
+<h2>
+    <p id="userViewer"></p>
+    <p class="vs"> vs </p>
+    <p id="userPlayer"></p>
+</h2>
 <table>
     <thead id="salvoTHead"></thead>
     <tbody id="salvoTBody"></tbody>
