create code to salvo class and salvo repository and relationships with gameplayer

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -7,18 +7,19 @@
 
 </head>
 <body>
-<h1>Ship locations</h1>
-<h2>
-    <p id="userViewer"></p>
-    <p class="vs"> vs </p>
-    <p id="userPlayer"></p>
-</h2>
-<table>
-    <thead id="salvoTHead"></thead>
-    <tbody id="salvoTBody"></tbody>
+    <div id="container">
+        <h1>Ship locations</h1>
+        <h2>
+            <p id="userViewer"></p>
+            <p class="vs"> vs </p>
+            <p id="userPlayer"></p>
+        </h2>
+        <table>
+            <thead id="salvoTHead"></thead>
+            <tbody id="salvoTBody"></tbody>
 
-</table>
-
+        </table>
+    </div>
 
 <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
 <script src="scripts/game.js"></script>
