create leaderboard table with total score, won, lost, tied

--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -12,6 +12,20 @@
 
     </ol>
 
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Total</th>
+                <th>Won</th>
+                <th>Lost</th>
+                <th>Tied</th>
+            </tr>
+        </thead>
+        <tbody id="tableLeader"></tbody>
+
+    </table>
+
 
     <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
     <!--<script src="scripts/data.js"></script>-->
