create code to authentication and authoritation

--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -8,9 +8,17 @@
 </head>
 <body>
     <h1>Leaderboard</h1>
-    <ol id="gamesList">
 
-    </ol>
+
+    <!--<form id="login-form" onsubmit="return false" action="login" method='POST'>-->
+        <!--<label>Name: <input type="text" name="username"></label>-->
+        <!--<label>Password: <input type="text" name="password"></label>-->
+        <!--<button>Log in</button>-->
+    <!--</form>-->
+
+    <!--<form id="logout-form" onsubmit="return false">-->
+        <!--<button>Log out</button>-->
+    <!--</form>-->
 
     <table id="leaderBoard">
         <thead>
@@ -25,6 +33,11 @@
         <tbody id="tableLeader"></tbody>
 
     </table>
+
+    <ol id="gamesList">
+    </ol>
+
+
 
 
     <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
