create code in back-end to join to a game

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -10,9 +10,9 @@
     <div id="container">
         <h1>Your game info</h1>
         <h2>
-            <p id="userViewer"></p>
-            <p class="vs"> vs </p>
             <p id="userPlayer"></p>
+            <p class="vs"> vs </p>
+            <p id="userOpponent"></p>
         </h2>
         <div class="tables">
             <div class="table1">
