--- a/src/main/resources/static/web/games.html
+++ b/src/main/resources/static/web/games.html
@@ -19,6 +19,7 @@
         <button id="login" type="button">Log in</button>
         <button id="logout" type="button">Log out</button>
         <button id="signin" type="button">Sign in</button>
+        <button id="newGame" type="button">Create New Game</button>
 
     </div>
 
