create code to avoid overlap ships and ships out grid in post order

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -28,9 +28,11 @@
 
             <div id="ships">
 
-                <div id="battleship" class="battleship" draggable="true" ondragstart="dragStart(event)" ondragend="dragEnd(event)"><header>BATTLESHIP</header></div>
-                <div id="destroyer" class="destroyer" draggable="true" ondragstart="dragStart(event)" ondragend="dragEnd(event)"><header>DESTROYER</header></div>
-                <div id="submarine" class="submarine" draggable="true" ondragstart="dragStart(event)" ondragend="dragEnd(event)"><header>SUBMARINE</header></div>
+                <div id="aircraft" class="aircraft" data-firstCell="" draggable="true"><header>AIRCRAFT</header></div>
+                <div id="battleship" class="battleship" data-firstCell="" draggable="true"><header>BATTLESHIP</header></div>
+                <div id="destroyer" class= "destroyer" data-firstCell="" draggable="true"><header>DESTROYER</header></div>
+                <div id="submarine" class="submarine" data-firstCell="" draggable="true"><header>SUBMARINE</header></div>
+                <div id="patrolboat" class="patrolboat" data-firstCell="" draggable="true"><header>PATROL BOAT</header></div>
 
             </div>
             <!--<div class="table2">-->
