create code to add salvos in back-end

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -35,13 +35,16 @@
                 <div id="patrolboat" class="patrolboat" data-firstCell="" draggable="true"><header>PATROL BOAT</header></div>
 
             </div>
-            <!--<div class="table2">-->
-                <!--<h3 class=""titleTable2>Salvo locations</h3>-->
-                <!--<table id="salvosTable">-->
-                    <!--<thead id="salvoTHead2"></thead>-->
-                    <!--<tbody id="salvoTBody2"></tbody>-->
-                <!--</table>-->
-            <!--</div>-->
+
+            <div class="table2">
+                <h3 class=""titleTable2>Salvo locations</h3>
+                <table id="salvosTable">
+                    <thead id="salvoTHead2"></thead>
+                    <tbody id="salvoTBody2"></tbody>
+                </table>
+            </div>
+
+
         </div>
     </div>
 
