create code to print salvo in front-end and back-end security conditions

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -15,10 +15,9 @@
             <p id="userOpponent"></p>
         </h2>
 
-        <button id="createShips" type="button">Create Ships</button>
-
         <div class="tables">
             <div class="table1">
+                <button id="createShips" type="button">Create Ships</button>
                 <h3>Ship locations</h3>
                 <table id="shipsTable">
                     <thead id="shipTHead1"></thead>
@@ -37,6 +36,7 @@
             </div>
 
             <div class="table2">
+                <button id="createSalvo" type="button">Fired Salvo</button>
                 <h3 class=""titleTable2>Salvo locations</h3>
                 <table id="salvosTable">
                     <thead id="salvoTHead2"></thead>
