--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -37,7 +37,7 @@
 
             <div class="table2">
                 <button id="createSalvo" type="button">Fired Salvo</button>
-                <h3 class=""titleTable2>Salvo locations</h3>
+                <h3 class="titleTable2">Salvo locations</h3>
                 <table id="salvosTable">
                     <thead id="salvoTHead2"></thead>
                     <tbody id="salvoTBody2"></tbody>
