create code to print hits table

--- a/src/main/resources/static/web/game.html
+++ b/src/main/resources/static/web/game.html
@@ -15,6 +15,25 @@
             <p id="userOpponent"></p>
         </h2>
 
+        <div class="table3">
+            <table id="hitsTable">
+                <thead id="hitTHead3">
+                    <tr>
+                        <th rowspan="2">Turn</th>
+                        <th colspan="2">Hits on OPPONENT</th>
+                        <th colspan="2">Hits on YOU</th>
+                    </tr>
+                    <tr>
+                        <th>Hits</th>
+                        <th>Left</th>
+                        <th>Hits</th>
+                        <th>Left</th>
+                    </tr>
+                </thead>
+                <tbody id="hitTBody3"></tbody>
+            </table>
+        </div>
+
         <div class="tables">
             <div class="table1">
                 <button id="createShips" type="button">Create Ships</button>
@@ -43,8 +62,6 @@
                     <tbody id="salvoTBody2"></tbody>
                 </table>
             </div>
-
-
         </div>
     </div>
 
